spinner is-hidden by hand fix

--- a/src/sass/_spinner.scss
+++ b/src/sass/_spinner.scss
@@ -4,7 +4,7 @@
     }
 }
 
-.is-hidden {
+.is-hidden__spinner {
     display: none;
     visibility: hidden;
 }
